Updated test console to reflect new template tags.

--- a/index.html
+++ b/index.html
@@ -211,10 +211,10 @@ $(function() {
  * Kaete Demo Console
  *
  * Template tags:
- *   &lt;% ... %&gt;   for javascript
- *   &lt;&lt; ... &gt;&gt;   for a javascript expression to be printed (no semi-colons)
- *   &lt;&lt;! ... &gt;&gt;  for an unescaped expression to be printed
- *   &lt;# ... #&gt;   for comments
+ *   [% ... %]   for javascript
+ *   [[ ... ]]   for a javascript expression to be printed (no semi-colons)
+ *   [[* ... ]]  for an unescaped expression to be printed
+ *   [# ... #]   for comments
  *
  */</pre>
     </div>
