Added a little default program.

--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@ $(function() {
     prettyPrint();
 
     var code_div = $('#code');
+    code_div.val("[# An example template. Click \"Render and Compile\" below. #]\n<h1>Kaete Example Template</h1>\n\n[# The following context variables are defined: people, number, test #]\n<h2>[[ test ]]</h2>\n\n<ol> [# Loop through people, assigning person and displaying the list #]\n[% for (var i in people) { \n     var person = people[i] %]\n    <li>[[ person ]]</li>\n[% } %]</ol>\n\n<p>I can also add! 1 + 1 = [[ 1 + 1 ]]!</p>");
 
     if (window.localStorage) {
         if (window.localStorage.kaete_code) {
@@ -193,7 +194,7 @@ $(function() {
     <div class="code-input">
         <div class="padding-right">
             <div class="code-container">
-                <textarea id="code" rows="13"></textarea>
+                <textarea id="code" rows="14"></textarea>
             </div>
             <label class="pick-json">
                 <input class="form-stacked" type="checkbox" id="show_context">
