--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ $(function() {
 
 <div id="header">
     <h1>Kaete Demo Console</h1>
-    <h3><a href="https://github.com/dtcooper/Kaete">Kaete</a>'s An ECMAScript Templating Engine</h3>
+    <h3><a href="https://github.com/dtcooper/Kaete">Kaete</a>'s Another ECMAScript Templating Engine</h3>
 </div>
 
 <div id="content">
