Added json2.js to tests.html so they run on older IE.

--- a/tests.html
+++ b/tests.html
@@ -3,6 +3,7 @@
 <html>
 <head>
 <title>Kaete QUnit Tests</title>
+<script type="text/javascript" src="http://ajax.cdnjs.com/ajax/libs/json2/20110223/json2.js"></script>
 <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
 <link rel="stylesheet" href="http://code.jquery.com/qunit/git/qunit.css" type="text/css" media="screen" />
 <script type="text/javascript" src="http://code.jquery.com/qunit/git/qunit.js"></script>
